fix bug for bubble chart on mobile version and remove export to images for pie chart

--- a/src/main/webapp/assets/sass/main.sass
+++ b/src/main/webapp/assets/sass/main.sass
@@ -19,6 +19,8 @@ a:hover
   padding: 0
 .row
   margin: 0
+.col-md-12
+  padding: 0
 /* -- style for header --*/
 .setting-block
   padding-top: 10px
@@ -106,6 +108,15 @@ ul.setting-items
   color: #727272
   font-size: 11px
   padding-bottom: 5px
+.chart-block
+  width: 100%
+  clear: both
+  min-height: 550px
+.chart-contrainer
+  width: 100%
+  clear: both
+  display: block
+  text-align: center
 /* --- Style for bubble chart ---*/
 
 .bubble-chart-block
@@ -119,6 +130,10 @@ ul.setting-items
 .bubble-chart-container
   width: 400px
   margin: auto
+  position: relative
+  left: 0
+  right: 0
+  min-height: 500px
 
 .find-jobs-block
   float: left
@@ -152,9 +167,10 @@ ul.setting-items
       background-color: #007bdc
 .pie-Chart-Container
   padding-top: 50px
+  min-height: 450px
 
 .analystic-find-jobs-block
-  position: fixed
+  position: relative
   bottom: 15px
   left: 0
   right: 0
